// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppSearchFilters should match a snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <div
        class="el-flex-container el-flex-column"
      >
        <small
          class="el-text-base el-small-text el-has-no-margin mock-css.
  margin-top: 1.25rem;
  min-height: 1.5rem;
 mock-css.
  display: flex;

  , {
    display: none;
  }
"
        >
          Browse By
        </small>
      </div>
      <div
        class="el-flex-container el-flex-justify-between"
      >
        <p
          class="el-text-base el-body-text el-has-bold-text mock-css.
  display: none;

  , {
    display: flex;
  }
"
        >
          Browse By
        </p>
      </div>
      <div
        class="el-fade-in mock-css.
  width: 100%;
  border: 1px solid var(--color-grey-150);
  margin-bottom: 1.25rem;
  border-radius: 0.125rem;
 el-multi-select-un-selected"
      >
        <input
          aria-hidden="true"
          class="mocked-styled-52 el-multi-select-checkbox"
          id="9"
          name="Tools"
          type="checkbox"
          value="9"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="9"
          role="option"
        >
          Tools
        </label>
        <input
          aria-hidden="true"
          class="mocked-styled-52 el-multi-select-checkbox"
          id="8"
          name="Social"
          type="checkbox"
          value="8"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="8"
          role="option"
        >
          Social
        </label>
        <input
          aria-hidden="true"
          class="mocked-styled-52 el-multi-select-checkbox"
          id="7"
          name="Marketing"
          type="checkbox"
          value="7"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="7"
          role="option"
        >
          Marketing
        </label>
        <input
          aria-hidden="true"
          class="mocked-styled-52 el-multi-select-checkbox"
          id="6"
          name="Communication"
          type="checkbox"
          value="6"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="6"
          role="option"
        >
          Communication
        </label>
        <input
          aria-hidden="true"
          class="mocked-styled-52 el-multi-select-checkbox"
          id="5"
          name="Media"
          type="checkbox"
          value="5"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="5"
          role="option"
        >
          Media
        </label>
        <input
          aria-hidden="true"
          class="mocked-styled-52 el-multi-select-checkbox"
          id="4"
          name="Events"
          type="checkbox"
          value="4"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="4"
          role="option"
        >
          Events
        </label>
        <input
          aria-hidden="true"
          class="mocked-styled-52 el-multi-select-checkbox"
          id="3"
          name="Finance"
          type="checkbox"
          value="3"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="3"
          role="option"
        >
          Finance
        </label>
        <input
          aria-hidden="true"
          class="mocked-styled-52 el-multi-select-checkbox"
          id="2"
          name="Productivity"
          type="checkbox"
          value="2"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="2"
          role="option"
        >
          Productivity
        </label>
        <input
          aria-hidden="true"
          class="mocked-styled-52 el-multi-select-checkbox"
          id="1"
          name="Other"
          type="checkbox"
          value="1"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="1"
          role="option"
        >
          Other
        </label>
      </div>
      <div
        class="el-flex-container mock-css.
  display: none;

  , {
    display: flex;
  }
"
      >
        <div
          class="el-flex-container el-flex-align-center mock-css.
  width: 100%;

  , {
    margin-bottom: 2.5rem;
    width: 50%;
  }

  , {
    width: 33.33%;
  }

  , {
    width: 25%;
  }
 el-mr5"
        >
          <span
            class="mock-css.
  border-radius: 0.125rem 0 0 0.125rem;
  padding: 0 0.5rem 0 1.25rem;
  height: 2.25rem;
  display: flex;
  justify-content: center;
  align-items: center;
  border: 1px solid var(--color-grey-150);
  border-right: none;

  &:has(+ input:focus) {
    border: 1px solid var(--intent-primary);
    border-right: none;
  }
 el-intent-default el-icon-new el-icon"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              title="Icon image with name search"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42M4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0"
                fill="currentColor"
              />
            </svg>
          </span>
          <mock-styled.input
            placeholder="Search by App or Developer"
            type="text"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <div
      class="el-flex-container el-flex-column"
    >
      <small
        class="el-text-base el-small-text el-has-no-margin mock-css.
  margin-top: 1.25rem;
  min-height: 1.5rem;
 mock-css.
  display: flex;

  , {
    display: none;
  }
"
      >
        Browse By
      </small>
    </div>
    <div
      class="el-flex-container el-flex-justify-between"
    >
      <p
        class="el-text-base el-body-text el-has-bold-text mock-css.
  display: none;

  , {
    display: flex;
  }
"
      >
        Browse By
      </p>
    </div>
    <div
      class="el-fade-in mock-css.
  width: 100%;
  border: 1px solid var(--color-grey-150);
  margin-bottom: 1.25rem;
  border-radius: 0.125rem;
 el-multi-select-un-selected"
    >
      <input
        aria-hidden="true"
        class="mocked-styled-52 el-multi-select-checkbox"
        id="9"
        name="Tools"
        type="checkbox"
        value="9"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="9"
        role="option"
      >
        Tools
      </label>
      <input
        aria-hidden="true"
        class="mocked-styled-52 el-multi-select-checkbox"
        id="8"
        name="Social"
        type="checkbox"
        value="8"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="8"
        role="option"
      >
        Social
      </label>
      <input
        aria-hidden="true"
        class="mocked-styled-52 el-multi-select-checkbox"
        id="7"
        name="Marketing"
        type="checkbox"
        value="7"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="7"
        role="option"
      >
        Marketing
      </label>
      <input
        aria-hidden="true"
        class="mocked-styled-52 el-multi-select-checkbox"
        id="6"
        name="Communication"
        type="checkbox"
        value="6"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="6"
        role="option"
      >
        Communication
      </label>
      <input
        aria-hidden="true"
        class="mocked-styled-52 el-multi-select-checkbox"
        id="5"
        name="Media"
        type="checkbox"
        value="5"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="5"
        role="option"
      >
        Media
      </label>
      <input
        aria-hidden="true"
        class="mocked-styled-52 el-multi-select-checkbox"
        id="4"
        name="Events"
        type="checkbox"
        value="4"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="4"
        role="option"
      >
        Events
      </label>
      <input
        aria-hidden="true"
        class="mocked-styled-52 el-multi-select-checkbox"
        id="3"
        name="Finance"
        type="checkbox"
        value="3"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="3"
        role="option"
      >
        Finance
      </label>
      <input
        aria-hidden="true"
        class="mocked-styled-52 el-multi-select-checkbox"
        id="2"
        name="Productivity"
        type="checkbox"
        value="2"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="2"
        role="option"
      >
        Productivity
      </label>
      <input
        aria-hidden="true"
        class="mocked-styled-52 el-multi-select-checkbox"
        id="1"
        name="Other"
        type="checkbox"
        value="1"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="1"
        role="option"
      >
        Other
      </label>
    </div>
    <div
      class="el-flex-container mock-css.
  display: none;

  , {
    display: flex;
  }
"
    >
      <div
        class="el-flex-container el-flex-align-center mock-css.
  width: 100%;

  , {
    margin-bottom: 2.5rem;
    width: 50%;
  }

  , {
    width: 33.33%;
  }

  , {
    width: 25%;
  }
 el-mr5"
      >
        <span
          class="mock-css.
  border-radius: 0.125rem 0 0 0.125rem;
  padding: 0 0.5rem 0 1.25rem;
  height: 2.25rem;
  display: flex;
  justify-content: center;
  align-items: center;
  border: 1px solid var(--color-grey-150);
  border-right: none;

  &:has(+ input:focus) {
    border: 1px solid var(--intent-primary);
    border-right: none;
  }
 el-intent-default el-icon-new el-icon"
        >
          <svg
            fill="none"
            height="1em"
            role="img"
            title="Icon image with name search"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42M4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0"
              fill="currentColor"
            />
          </svg>
        </span>
        <mock-styled.input
          placeholder="Search by App or Developer"
          type="text"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppSearchFilters should match a snapshot where has search 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <div
        class="el-flex-container el-flex-column"
      >
        <mock-styled.div
          classname="mock-css."
        >
          <div
            class="el-flex-container el-flex-align-center mock-css.
  width: 100%;

  , {
    margin-bottom: 2.5rem;
    width: 50%;
  }

  , {
    width: 33.33%;
  }

  , {
    width: 25%;
  }
"
          >
            <span
              class="mock-css.
  border-radius: 0.125rem 0 0 0.125rem;
  padding: 0 0.5rem 0 1.25rem;
  height: 2.25rem;
  display: flex;
  justify-content: center;
  align-items: center;
  border: 1px solid var(--color-grey-150);
  border-right: none;

  &:has(+ input:focus) {
    border: 1px solid var(--intent-primary);
    border-right: none;
  }
 el-intent-default el-icon-new el-icon"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                title="Icon image with name search"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42M4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0"
                  fill="currentColor"
                />
              </svg>
            </span>
            <mock-styled.input
              placeholder="Search by App or Developer"
              type="text"
            />
          </div>
        </mock-styled.div>
      </div>
      <div
        class="el-flex-container el-flex-justify-between"
      >
        <p
          class="el-text-base el-body-text el-has-bold-text mock-css.
  display: none;

  , {
    display: flex;
  }
"
        >
          Browse By
        </p>
      </div>
      <div
        class="el-fade-in mock-css.
  width: 100%;
  border: 1px solid var(--color-grey-150);
  margin-bottom: 1.25rem;
  border-radius: 0.125rem;
 mock-css.
  display: none;

  , {
    display: flex;
  }
 el-multi-select-un-selected"
      >
        <input
          aria-hidden="true"
          class="mocked-styled-52 el-multi-select-checkbox"
          id="9"
          name="Tools"
          type="checkbox"
          value="9"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="9"
          role="option"
        >
          Tools
        </label>
        <input
          aria-hidden="true"
          class="mocked-styled-52 el-multi-select-checkbox"
          id="8"
          name="Social"
          type="checkbox"
          value="8"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="8"
          role="option"
        >
          Social
        </label>
        <input
          aria-hidden="true"
          class="mocked-styled-52 el-multi-select-checkbox"
          id="7"
          name="Marketing"
          type="checkbox"
          value="7"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="7"
          role="option"
        >
          Marketing
        </label>
        <input
          aria-hidden="true"
          class="mocked-styled-52 el-multi-select-checkbox"
          id="6"
          name="Communication"
          type="checkbox"
          value="6"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="6"
          role="option"
        >
          Communication
        </label>
        <input
          aria-hidden="true"
          class="mocked-styled-52 el-multi-select-checkbox"
          id="5"
          name="Media"
          type="checkbox"
          value="5"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="5"
          role="option"
        >
          Media
        </label>
        <input
          aria-hidden="true"
          class="mocked-styled-52 el-multi-select-checkbox"
          id="4"
          name="Events"
          type="checkbox"
          value="4"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="4"
          role="option"
        >
          Events
        </label>
        <input
          aria-hidden="true"
          class="mocked-styled-52 el-multi-select-checkbox"
          id="3"
          name="Finance"
          type="checkbox"
          value="3"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="3"
          role="option"
        >
          Finance
        </label>
        <input
          aria-hidden="true"
          class="mocked-styled-52 el-multi-select-checkbox"
          id="2"
          name="Productivity"
          type="checkbox"
          value="2"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="2"
          role="option"
        >
          Productivity
        </label>
        <input
          aria-hidden="true"
          class="mocked-styled-52 el-multi-select-checkbox"
          id="1"
          name="Other"
          type="checkbox"
          value="1"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="1"
          role="option"
        >
          Other
        </label>
      </div>
      <div
        class="mock-css.
  display: flex;

  , {
    display: none;
  }
 el-mb5 el-button-group"
      >
        <div
          class="mocked-styled-3 el-button-group-inner"
        >
          <button
            class="el-intent-neutral el-button"
          >
            <div
              class="mocked-styled-0 el-button-loader"
            />
            Clear Search Filters
          </button>
        </div>
      </div>
      <div
        class="el-flex-container mock-css.
  display: none;

  , {
    display: flex;
  }
"
      >
        <div
          class="el-flex-container el-flex-align-center mock-css.
  width: 100%;

  , {
    margin-bottom: 2.5rem;
    width: 50%;
  }

  , {
    width: 33.33%;
  }

  , {
    width: 25%;
  }
 el-mr5"
        >
          <span
            class="mock-css.
  border-radius: 0.125rem 0 0 0.125rem;
  padding: 0 0.5rem 0 1.25rem;
  height: 2.25rem;
  display: flex;
  justify-content: center;
  align-items: center;
  border: 1px solid var(--color-grey-150);
  border-right: none;

  &:has(+ input:focus) {
    border: 1px solid var(--intent-primary);
    border-right: none;
  }
 el-intent-default el-icon-new el-icon"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              title="Icon image with name search"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42M4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0"
                fill="currentColor"
              />
            </svg>
          </span>
          <mock-styled.input
            placeholder="Search by App or Developer"
            type="text"
          />
        </div>
        <button
          class="el-intent-neutral el-button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          Clear Search Filters
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <div
      class="el-flex-container el-flex-column"
    >
      <mock-styled.div
        classname="mock-css."
      >
        <div
          class="el-flex-container el-flex-align-center mock-css.
  width: 100%;

  , {
    margin-bottom: 2.5rem;
    width: 50%;
  }

  , {
    width: 33.33%;
  }

  , {
    width: 25%;
  }
"
        >
          <span
            class="mock-css.
  border-radius: 0.125rem 0 0 0.125rem;
  padding: 0 0.5rem 0 1.25rem;
  height: 2.25rem;
  display: flex;
  justify-content: center;
  align-items: center;
  border: 1px solid var(--color-grey-150);
  border-right: none;

  &:has(+ input:focus) {
    border: 1px solid var(--intent-primary);
    border-right: none;
  }
 el-intent-default el-icon-new el-icon"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              title="Icon image with name search"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42M4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0"
                fill="currentColor"
              />
            </svg>
          </span>
          <mock-styled.input
            placeholder="Search by App or Developer"
            type="text"
          />
        </div>
      </mock-styled.div>
    </div>
    <div
      class="el-flex-container el-flex-justify-between"
    >
      <p
        class="el-text-base el-body-text el-has-bold-text mock-css.
  display: none;

  , {
    display: flex;
  }
"
      >
        Browse By
      </p>
    </div>
    <div
      class="el-fade-in mock-css.
  width: 100%;
  border: 1px solid var(--color-grey-150);
  margin-bottom: 1.25rem;
  border-radius: 0.125rem;
 mock-css.
  display: none;

  , {
    display: flex;
  }
 el-multi-select-un-selected"
    >
      <input
        aria-hidden="true"
        class="mocked-styled-52 el-multi-select-checkbox"
        id="9"
        name="Tools"
        type="checkbox"
        value="9"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="9"
        role="option"
      >
        Tools
      </label>
      <input
        aria-hidden="true"
        class="mocked-styled-52 el-multi-select-checkbox"
        id="8"
        name="Social"
        type="checkbox"
        value="8"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="8"
        role="option"
      >
        Social
      </label>
      <input
        aria-hidden="true"
        class="mocked-styled-52 el-multi-select-checkbox"
        id="7"
        name="Marketing"
        type="checkbox"
        value="7"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="7"
        role="option"
      >
        Marketing
      </label>
      <input
        aria-hidden="true"
        class="mocked-styled-52 el-multi-select-checkbox"
        id="6"
        name="Communication"
        type="checkbox"
        value="6"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="6"
        role="option"
      >
        Communication
      </label>
      <input
        aria-hidden="true"
        class="mocked-styled-52 el-multi-select-checkbox"
        id="5"
        name="Media"
        type="checkbox"
        value="5"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="5"
        role="option"
      >
        Media
      </label>
      <input
        aria-hidden="true"
        class="mocked-styled-52 el-multi-select-checkbox"
        id="4"
        name="Events"
        type="checkbox"
        value="4"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="4"
        role="option"
      >
        Events
      </label>
      <input
        aria-hidden="true"
        class="mocked-styled-52 el-multi-select-checkbox"
        id="3"
        name="Finance"
        type="checkbox"
        value="3"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="3"
        role="option"
      >
        Finance
      </label>
      <input
        aria-hidden="true"
        class="mocked-styled-52 el-multi-select-checkbox"
        id="2"
        name="Productivity"
        type="checkbox"
        value="2"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="2"
        role="option"
      >
        Productivity
      </label>
      <input
        aria-hidden="true"
        class="mocked-styled-52 el-multi-select-checkbox"
        id="1"
        name="Other"
        type="checkbox"
        value="1"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="1"
        role="option"
      >
        Other
      </label>
    </div>
    <div
      class="mock-css.
  display: flex;

  , {
    display: none;
  }
 el-mb5 el-button-group"
    >
      <div
        class="mocked-styled-3 el-button-group-inner"
      >
        <button
          class="el-intent-neutral el-button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          Clear Search Filters
        </button>
      </div>
    </div>
    <div
      class="el-flex-container mock-css.
  display: none;

  , {
    display: flex;
  }
"
    >
      <div
        class="el-flex-container el-flex-align-center mock-css.
  width: 100%;

  , {
    margin-bottom: 2.5rem;
    width: 50%;
  }

  , {
    width: 33.33%;
  }

  , {
    width: 25%;
  }
 el-mr5"
      >
        <span
          class="mock-css.
  border-radius: 0.125rem 0 0 0.125rem;
  padding: 0 0.5rem 0 1.25rem;
  height: 2.25rem;
  display: flex;
  justify-content: center;
  align-items: center;
  border: 1px solid var(--color-grey-150);
  border-right: none;

  &:has(+ input:focus) {
    border: 1px solid var(--intent-primary);
    border-right: none;
  }
 el-intent-default el-icon-new el-icon"
        >
          <svg
            fill="none"
            height="1em"
            role="img"
            title="Icon image with name search"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42M4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0"
              fill="currentColor"
            />
          </svg>
        </span>
        <mock-styled.input
          placeholder="Search by App or Developer"
          type="text"
        />
      </div>
      <button
        class="el-intent-neutral el-button"
      >
        <div
          class="mocked-styled-0 el-button-loader"
        />
        Clear Search Filters
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
